[gd_scene load_steps=3 format=3 uid="uid://5mmws6kxl3xa"]

[ext_resource type="Script" path="res://对话框2/Test_.gd" id="1_cybqj"]
[ext_resource type="Texture2D" uid="uid://bdyvv8kclt8qy" path="res://外源/photo（第二关）/按键.png" id="2_6he8y"]

[node name="Test" type="Node2D"]
position = Vector2(30, 8)
script = ExtResource("1_cybqj")
metadata/_edit_vertical_guides_ = [8676.0]
metadata/_edit_horizontal_guides_ = [891.0]

[node name="test1" type="Area2D" parent="."]
position = Vector2(-152, -83)

[node name="test1_2d" type="CollisionPolygon2D" parent="test1"]
position = Vector2(678, 874)
polygon = PackedVector2Array(-32, 96, -8, 94, -10, -162, -30, -166)

[node name="test2" type="Area2D" parent="."]
position = Vector2(1338, 696)

[node name="test2_2d" type="CollisionPolygon2D" parent="test2"]
position = Vector2(1283, -3)
scale = Vector2(1.63075, 1.63075)
polygon = PackedVector2Array(14, -50, 13, 113, 27, 115, 29, -52)

[node name="films1" type="Area2D" parent="."]
position = Vector2(2553, 900)

[node name="films_2d" type="CollisionPolygon2D" parent="films1"]
position = Vector2(-568, -114)
polygon = PackedVector2Array(15, -170, -5, -164, 1, 88, 21, 90)

[node name="i_test1" type="Area2D" parent="."]
position = Vector2(457, 780)
scale = Vector2(0.992785, 0.976784)

[node name="i_test1_2d" type="CollisionPolygon2D" parent="i_test1"]
position = Vector2(7965.09, -44.9049)
polygon = PackedVector2Array(-76, -80, -76.1787, 3.95422, -10.707, 3.95422, -10.707, -78.971)

[node name="i_test1_2d_tx" type="Sprite2D" parent="i_test1/i_test1_2d"]
visible = false
position = Vector2(-10.708, -112.755)
scale = Vector2(2.54351, 2.54351)
texture = ExtResource("2_6he8y")

[node name="i_test2" type="Area2D" parent="."]
position = Vector2(10648, 765)

[node name="i_test2_2d" type="CollisionPolygon2D" parent="i_test2"]
position = Vector2(0, -41)
polygon = PackedVector2Array(-76, -80, -75, 8, 1, 7, 2, -80)

[node name="i_test1_3d_tx" type="Sprite2D" parent="i_test2/i_test2_2d"]
visible = false
position = Vector2(36, -36)
scale = Vector2(2.73512, 2.73512)
texture = ExtResource("2_6he8y")

[node name="films2" type="Area2D" parent="."]
position = Vector2(7514, 426)

[node name="films_2d" type="CollisionPolygon2D" parent="films2"]
position = Vector2(-568, -114)
polygon = PackedVector2Array(15, -170, -5, -164, 1, 88, 21, 90)

[node name="films3" type="Area2D" parent="."]
position = Vector2(11795, 310)

[node name="films_2d" type="CollisionPolygon2D" parent="films3"]
position = Vector2(-568, -114)
polygon = PackedVector2Array(15, -170, -5, -164, 1, 88, 21, 90)

[connection signal="body_entered" from="test1" to="." method="test_enter" binds= ["test1", "stop", "f14"]]
[connection signal="body_exited" from="test1" to="." method="test_exit" binds= ["test1"]]
[connection signal="body_entered" from="test2" to="." method="test_enter" binds= ["test2", "stop", "f18"]]
[connection signal="body_exited" from="test2" to="." method="test_exit" binds= ["test2"]]
[connection signal="body_entered" from="films1" to="." method="films_enter" binds= ["films1", 2, "jump", "f2"]]
[connection signal="body_exited" from="films1" to="." method="films_exit" binds= ["films1"]]
[connection signal="body_entered" from="i_test1" to="." method="interaction_test_enter" binds= ["i_test1", 0, "stop", "f4"]]
[connection signal="body_exited" from="i_test1" to="." method="interaction_test_exit" binds= ["i_test1"]]
[connection signal="body_entered" from="i_test2" to="." method="interaction_test_enter" binds= ["i_test2", 0, "stop", "f3"]]
[connection signal="body_exited" from="i_test2" to="." method="interaction_test_exit" binds= ["i_test2"]]
[connection signal="body_entered" from="films2" to="." method="films_enter" binds= ["films2", 2, "stop", "f2_1"]]
[connection signal="body_exited" from="films2" to="." method="films_exit" binds= ["films2"]]
[connection signal="body_entered" from="films3" to="." method="films_enter" binds= ["films3", 1, "stop", "f2_2"]]
[connection signal="body_exited" from="films3" to="." method="films_exit" binds= ["films3"]]
